# internode-cli

./: README.md  SKILL.md  install.sh
cli/: Cargo.toml
cli/src/: main.rs
cli/src/client/: mod.rs
cli/src/commands/: changes.rs  cypher.rs  decisions.rs  diagnose.rs  embeddings.rs  entity.rs  graph.rs  intents.rs  mod.rs  projects.rs  repair.rs  replace.rs  statuses.rs  subtopics.rs  tasks.rs  teams.rs  topics.rs
